--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
+        <link rel="stylesheet" href="../css/main.css" >
+
     </head>
     <body>
