changed css to inline css since file link not working

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,8 @@
-      <h1 class="project-name">Team Armstrong</h1>
+<style>
+.project-name img{
+	height: 100%;
+    width: 100%;
+    padding-top: 26px;
+}
+</style>
+<h1 class="project-name">Team Armstrong</h1>
