tried another inline style

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,2 @@
-<style>
-.project-name img{
-	height: 100%;
-    width: 100%;
-    padding-top: 26px;
-}
-</style>
-<h1 class="project-name">Team Armstrong</h1>
+
+<h1 class="project-name" style="height: 100%;width: 100%;padding-top: 26px;">Team Armstrong</h1>
