--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 
-<!--<h1 class="project-name" style="height: 100%;width: 100%;padding-top: 26px;">Team Armstrong</h1>!-->
-<img src="https://github.com/TeamArmstrong/teamarmstrong.github.io/raw/master/images/armstrong-long2.png" alt="logo" style="height: 100%;width: 100%;padding-top: 26px;>
+<h1 class="project-name" style="height: 100%;width: 100%;padding-top: 26px;">Team Armstrong</h1>!
+<!-- <img src="https://github.com/TeamArmstrong/teamarmstrong.github.io/raw/master/images/armstrong-long2.png" alt="logo" style="height: 100%;width: 100%;padding-top: 26px;> -->
